package ast.types;

public class RealType extends AbstractType {

    public RealType(int line, int column) {
        super(line, column);
    }

}
